--- a/index.html
+++ b/index.html
@@ -12,64 +12,118 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
+            font-family: 'Arial', sans-serif;
+            background-color: #e0f7fa;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
             height: 100vh;
+            overflow: hidden;
+            color: #444;
         }
 
         .container {
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 350px;
-            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            width: 360px;
+            padding: 30px;
             text-align: center;
+            animation: fadeIn 2s ease-out;
         }
 
         h1 {
-            color: #333;
-            font-size: 24px;
-            margin-bottom: 20px;
+            color: #00695c;
+            font-size: 28px;
+            margin-bottom: 15px;
+            animation: slideIn 1.5s ease-out;
         }
 
         .image-container {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
+            border-radius: 10px;
+            overflow: hidden;
         }
 
         img {
             width: 100%;
             height: auto;
             border-radius: 8px;
+            animation: scaleIn 1.5s ease-out;
         }
 
         .joke-container {
             font-size: 18px;
-            color: #555;
-            background-color: #fafafa;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
+            color: #444;
+            background-color: #f1f8e9;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: inset 0 2px 6px rgba(0, 0, 0, 0.1);
+            margin-bottom: 25px;
+            animation: fadeIn 1.5s ease-out;
+        }
+
+        .joke-container:hover {
+            background-color: #c8e6c9;
         }
 
         button {
-            padding: 12px 20px;
-            background-color: #4CAF50;
+            padding: 15px 30px;
+            background-color: #00796b;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
-            font-size: 16px;
-            transition: transform 0.3s;
+            font-size: 18px;
+            transition: all 0.3s ease;
+            animation: buttonIn 1s ease-out;
         }
 
         button:hover {
-            background-color: #45a049;
-            transform: scale(1.05);
+            background-color: #004d40;
+            transform: translateY(-4px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateX(-100%);
+            }
+            to {
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes scaleIn {
+            from {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        @keyframes buttonIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
     </style>
@@ -77,7 +131,7 @@
 <body>
 
     <div class="container">
-        <h1>Dog Image & Joke</h1>
+        <h1>Random Dog & Hindi Joke</h1>
         <div class="image-container">
             <img id="dogImage" src="" alt="Random Dog Image">
         </div>
@@ -102,7 +156,7 @@
                     dogImage.src = dogImageUrl;
                 })
                 .catch(error => {
-                    console.error('There was an issue fetching the dog image:', error);
+                    console.error('Error fetching dog image:', error);
                     dogImage.src = '';
                 });
 
@@ -116,7 +170,7 @@
                 })
                 .catch(error => {
                     jokeElement.textContent = 'Oops! Something went wrong while fetching the joke.';
-                    console.error('There was an issue fetching the joke:', error);
+                    console.error('Error fetching joke:', error);
                 });
         }
     </script>
